tests/snapshots/examples_fixtures/type_system__67_real_program_domain_module_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/67_real_program_domain_module_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  lib/Flow/FTest.flx:4:9
  |
4 |         assert_eq(actual, expected)
  |         ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_neq`.

  lib/Flow/FTest.flx:8:9
  |
8 |         assert_neq(actual, expected)
  |         ^^^^^^^^^^

Hint:
  Define it first: let assert_neq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_true`.

  lib/Flow/FTest.flx:13:9
   |
13 |         assert_true(cond)
   |         ^^^^^^^^^^^

Hint:
  Define it first: let assert_true = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_false`.

  lib/Flow/FTest.flx:17:9
   |
17 |         assert_false(cond)
   |         ^^^^^^^^^^^^

Hint:
  Define it first: let assert_false = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_gt`.

  lib/Flow/FTest.flx:27:9
   |
27 |         assert_gt(a, b)
   |         ^^^^^^^^^

Hint:
  Define it first: let assert_gt = ...;

Help:
  Did you mean `a`?


error[E004]: Undefined Variable

I can't find a value named `assert_lt`.

  lib/Flow/FTest.flx:31:9
   |
31 |         assert_lt(a, b)
   |         ^^^^^^^^^

Hint:
  Define it first: let assert_lt = ...;

Help:
  Did you mean `a`?


error[E004]: Undefined Variable

I can't find a value named `assert_gte`.

  lib/Flow/FTest.flx:35:9
   |
35 |         assert_gte(a, b)
   |         ^^^^^^^^^^

Hint:
  Define it first: let assert_gte = ...;

Help:
  Did you mean `a`?


error[E004]: Undefined Variable

I can't find a value named `assert_lte`.

  lib/Flow/FTest.flx:39:9
   |
39 |         assert_lte(a, b)
   |         ^^^^^^^^^^

Hint:
  Define it first: let assert_lte = ...;

Help:
  Did you mean `a`?


error[E004]: Undefined Variable

I can't find a value named `assert_len`.

  lib/Flow/FTest.flx:44:9
   |
44 |         assert_len(collection, expected)
   |         ^^^^^^^^^^

Hint:
  Define it first: let assert_len = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_msg`.

  lib/Flow/FTest.flx:49:9
   |
49 |         assert_msg(
   |         ^^^^^^^^^^

Hint:
  Define it first: let assert_msg = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_msg`.

  lib/Flow/FTest.flx:72:9
   |
72 |         assert_msg(for_each_n() == 0, to_string(for_each_n()) + " case(s) failed in for_each")
   |         ^^^^^^^^^^

Hint:
  Define it first: let assert_msg = ...;

Found 11 errors.
== stdout ==
<not executed>
